maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: value update is not a member of Int
    	else if (random3() = 1) gauche();
                 ^RandomMouseMaze:10: error: not found: value prendBisecuit
    prendBisecuit();
    ^